      grub-common package.  (Closes: #435708, #443897, #463274, #301373,
      #284790)
    - patches/use_grub-probe_in_grub-install.diff: Do the same for
      grub-install. Closes: #441080)
  * drop SuSE's grub-install-fix-UUID_LABEL.diff, its functionality is now
    provided by Debian's use_grub-probe_in_grub-install.diff.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Mar 2008 20:36:51 +0100

grub-gfxboot (0.97-27) unstable; urgency=low

  * appease lintian and write (C) as © in debian/copyright.
  * adapt debian/NEWS to the current way of specifying savedefault.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 20 Feb 2008 22:56:27 +0100

grub-gfxboot (0.97-26) unstable; urgency=low

  * add changes from 0.97-31:
    [ Robert Millan ]
    - README.Debian, NEWS.Debian: Recommend that users invoke update-grub
      directly without hardcoding its path.  (Closes: #465235)
    - savedefault command is now issued when enabled via menu.lst variable of
      the same name, when user accepts the implications (note, that in the
      default configuration it was already disabled).
      (Closes: #393079, #462701)
    - Restrict license in debian/copyright to GPLv2-only.  (Closes: #438177)
  * add changes from, as of yet unreleased 0.97-30/ final:
    [ Robert Millan ]
    - patches/ext3_256byte_inode.diff: New.  Support 256-byte inodes in ext3.
      Thanks Stefan Lippers-Hollmann.  (Closes: #463236)
  * debian now defaults savedefault to off and provides an own option
    triggering it, no need to keep our custom hack anymore.
  * reorder series to match upstream debian, as far as possible.
  * import, but comment out, debian specific patches we're omitting.
  * refresh quilt series.
  * activate find-grub-dir.diff.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Thu, 14 Feb 2008 15:10:11 +0100

grub-gfxboot (0.97-25) unstable; urgency=low

  * add debian/NEWS entry explaining new savedefault, ext3 with 256 byte
    inodes and ext4 extents features.
