@@ -1,2 +1,0 @@
-usr/share/doc/grub-doc/html
-usr/share/bug/grub-doc
