@@ -1,14 +1,0 @@
-Document: grub
-Title: Grub Manual
-Author: OKUJI Yoshinori
-Abstract: This is the documentation of GNU GRUB, the GRand Unified Bootloader,
- a flexible and powerful boot loader program for PCs.
-Section: admin
-
-Format: HTML
-Index: /usr/share/doc/grub-doc/html/grub.html
-Files: /usr/share/doc/grub-doc/html/grub_*.html
-
-Format: info
-Index: /usr/share/info/grub.info.gz
-Files: /usr/share/info/grub.info.gz
