@@ -1,14 +1,0 @@
-Document: multiboot
-Title: Grub Multiboot Specification
-Author: OKUJI Yoshinori
-Abstract: This documents the Multiboot Specification, the proposal for the boot
- sequence standard.
-Section: admin
-
-Format: HTML
-Index: /usr/share/doc/grub-doc/html/multiboot.html
-Files: /usr/share/doc/grub-doc/html/multiboot_*.html
-
-Format: info
-Index: /usr/share/info/multiboot.info.gz
-Files: /usr/share/info/multiboot.info.gz
