@@ -1,2 +1,0 @@
-docs/grub.info
-docs/multiboot.info
