@@ -1,3 +1,0 @@
-docs/grub/*.html	usr/share/doc/grub-doc/html
-docs/multiboot/*.html	usr/share/doc/grub-doc/html
-debian/presubj		usr/share/bug/grub-doc
