@@ -1,6 +1,0 @@
-AUTHORS
-BUGS
-NEWS
-README
-THANKS
-TODO
