@@ -10,8 +10,10 @@ grub-gfxboot (0.97-28) UNRELEASED; urgency=low
       grub-install. Closes: #441080)
   * drop SuSE's grub-install-fix-UUID_LABEL.diff, its functionality is now
     provided by Debian's use_grub-probe_in_grub-install.diff.
+  * drop grub-gfxboot-doc, "grub-doc" has been renamed to multiboot-doc and
+    does the job just as well.
 
- -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Mar 2008 20:36:51 +0100
+ -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Tue, 11 Mar 2008 21:13:03 +0100
 
 grub-gfxboot (0.97-27) unstable; urgency=low
 
